--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ ext {
     description = "Hackly pre-compile source codes during Annotation Processing for an Abstract Manipulation"
 }
 
+build.finalizedBy(shadowJar)
+
 // Tasks
 allprojects {
     jar {
